# skolmaten

./: .dockerignore  .gitignore  Dockerfile  README-sv.md  README.md  app.py  db.py  pdf2json.py  pyproject.toml  requirements.txt  restart.sh
skolmaten/: __init__.py  app.py  db.py  pdf2json.py
static/: style.css
templates/: addcommentmodal.html  base.html  changedisplay.html  changepassword.html  comments.html  controls.html  editfood.html  error.html  import.html  login.html  modal.html  register.html  style.css  week.html  year.html
